force-app/main/default/objects/Contact/fields/CODIGOCLIENTE__c.field-meta.xml
<CustomField>
    <fullName>CODIGOCLIENTE__c</fullName>
    <externalId>true</externalId>
    <label>Codigo del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>