force-app/main/default/objects/Contact/fields/contactid__c.field-meta.xml
<CustomField>
    <fullName>contactid__c</fullName>
    <label>Consecutivo del contacto</label>
    <length>10</length>
    <type>Text</type>
</CustomField>