force-app/main/default/objects/Contact/fields/CONTACTNAME__c.field-meta.xml
<CustomField>
    <fullName>CONTACTNAME__c</fullName>
    <label>Nombre del contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>