force-app/main/default/objects/Contact/fields/contacttitle__c.field-meta.xml
<CustomField>
    <fullName>contacttitle__c</fullName>
    <label>Titulo del contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>