force-app/main/default/objects/Contact/fields/Creado_desde_un_Lead__c.field-meta.xml
<CustomField>
    <fullName>Creado_desde_un_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check bandera para corroborar si el contacto fue creado a partir de un lead y asi poder eliminarlo</description>
    <label>Creado desde un Lead</label>
    <type>Checkbox</type>
</CustomField>