force-app/main/default/objects/Contact/fields/DATEUPDATED__c.field-meta.xml
<CustomField>
    <fullName>DATEUPDATED__c</fullName>
    <label>Fecha de creacion y/o actualizacion</label>
    <type>Date</type>
</CustomField>