force-app/main/default/objects/Contact/fields/Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>Distribuidor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribuidor</label>
    <type>Checkbox</type>
</CustomField>