force-app/main/default/objects/Contact/fields/Email_IdExterno__c.field-meta.xml
<CustomField>
    <fullName>Email_IdExterno__c</fullName>
    <label>Email IdExterno</label>
    <type>Email</type>
</CustomField>