force-app/main/default/objects/Contact/fields/EMAILCONTACT__c.field-meta.xml
<CustomField>
    <fullName>EMAILCONTACT__c</fullName>
    <label>Correo electronico del contacto</label>
    <type>Email</type>
</CustomField>