force-app/main/default/objects/Contact/fields/Envio_correcto_a_WS__c.field-meta.xml
<CustomField>
    <fullName>Envio_correcto_a_WS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para verificar que el contacto exista en el JD E1</description>
    <label>Envío correcto a WS</label>
    <type>Checkbox</type>
</CustomField>