force-app/main/default/objects/Contact/fields/Genero_UDC__c.field-meta.xml
<CustomField>
    <fullName>Genero_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sugerido: Masculino, Femenino, Desconocido</inlineHelpText>
    <label>Género</label>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>