force-app/main/default/objects/Contact/fields/GENEROID__c.field-meta.xml
<CustomField>
    <fullName>GENEROID__c</fullName>
    <label>GENEROID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>