force-app/main/default/objects/Contact/fields/givename__c.field-meta.xml
<CustomField>
    <fullName>givename__c</fullName>
    <label>Primero nombre del contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>