force-app/main/default/objects/Contact/fields/Lugar_de_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_nacimiento__c</fullName>
    <label>Lugar de nacimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>