force-app/main/default/objects/Contact/fields/middlename__c.field-meta.xml
<CustomField>
    <fullName>middlename__c</fullName>
    <label>Segundo nombre del contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>