force-app/main/default/objects/Contact/fields/namemailing__c.field-meta.xml
<CustomField>
    <fullName>namemailing__c</fullName>
    <label>Nombre del contacto (apellidos nombre)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>