force-app/main/default/objects/Contact/fields/Numero_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_documento__c</fullName>
    <description>Numero de identificación único de cada contacto</description>
    <label>Número de documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>