force-app/main/default/objects/Contact/fields/Ocupaci_n__c.field-meta.xml
<CustomField>
    <fullName>Ocupaci_n__c</fullName>
    <label>Ocupación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abogado y Notario</fullName>
            </value>
            <value>
                <fullName>Administrador</fullName>
            </value>
            <value>
                <fullName>Agente Call Center</fullName>
            </value>
            <value>
                <fullName>Agente de Seguros</fullName>
            </value>
            <value>
                <fullName>Agricultor / Ganadero</fullName>
            </value>
            <value>
                <fullName>Albañil</fullName>
            </value>
            <value>
                <fullName>Ama De Casa</fullName>
            </value>
            <value>
                <fullName>Analista de Crédito</fullName>
            </value>
            <value>
                <fullName>Analista de Datos</fullName>
            </value>
            <value>
                <fullName>Area de Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Arquitecto</fullName>
            </value>
            <value>
                <fullName>Artesano</fullName>
            </value>
            <value>
                <fullName>Atletas</fullName>
            </value>
            <value>
                <fullName>Barbero</fullName>
            </value>
            <value>
                <fullName>Barrendero</fullName>
            </value>
            <value>
                <fullName>Bibliotecario</fullName>
            </value>
            <value>
                <fullName>Biólogo</fullName>
            </value>
            <value>
                <fullName>Bodeguero/Auxiliar De Carga/Despachador</fullName>
            </value>
            <value>
                <fullName>Bombero</fullName>
            </value>
            <value>
                <fullName>Cajero</fullName>
            </value>
            <value>
                <fullName>Camarero</fullName>
            </value>
            <value>
                <fullName>Carnicero</fullName>
            </value>
            <value>
                <fullName>Carpintero</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Comerciante</fullName>
            </value>
            <value>
                <fullName>Comunicador</fullName>
            </value>
            <value>
                <fullName>Conductor</fullName>
            </value>
            <value>
                <fullName>Conserje</fullName>
            </value>
            <value>
                <fullName>Contador</fullName>
            </value>
            <value>
                <fullName>Dentista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>