force-app/main/default/objects/Contact/fields/Origen_Hubspot__c.field-meta.xml
<CustomField>
    <fullName>Origen_Hubspot__c</fullName>
    <label>Origen Hubspot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>