force-app/main/default/objects/Contact/fields/Profesi_n__c.field-meta.xml
<CustomField>
    <fullName>Profesi_n__c</fullName>
    <label>Profesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abogado</fullName>
            </value>
            <value>
                <fullName>Administrador de Empresas</fullName>
            </value>
            <value>
                <fullName>Agricultor / Ganadero</fullName>
            </value>
            <value>
                <fullName>Ama De Casa</fullName>
            </value>
            <value>
                <fullName>Arquitecto</fullName>
            </value>
            <value>
                <fullName>Biólogo</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Comerciante</fullName>
            </value>
            <value>
                <fullName>Comunicador</fullName>
            </value>
            <value>
                <fullName>Contador</fullName>
            </value>
            <value>
                <fullName>Dentista</fullName>
            </value>
            <value>
                <fullName>Diplomático / Estadista</fullName>
            </value>
            <value>
                <fullName>Diseñador</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Economista</fullName>
            </value>
            <value>
                <fullName>Enfermero</fullName>
            </value>
            <value>
                <fullName>Farmaceutico</fullName>
            </value>
            <value>
                <fullName>Fotógrafo</fullName>
            </value>
            <value>
                <fullName>Historiador</fullName>
            </value>
            <value>
                <fullName>Ingeniero Agrónomo</fullName>
            </value>
            <value>
                <fullName>Ingeniero Civil</fullName>
            </value>
            <value>
                <fullName>Ingeniero Eléctrico</fullName>
            </value>
            <value>
                <fullName>Ingeniero en Computación</fullName>
            </value>
            <value>
                <fullName>Ingeniero en Sistemas</fullName>
            </value>
            <value>
                <fullName>Ingeniero en Telecomunicaciones</fullName>
            </value>
            <value>
                <fullName>Ingeniero Industrial</fullName>
            </value>
            <value>
                <fullName>Ingeniero Zootenista</fullName>
            </value>
            <value>
                <fullName>Licenciado</fullName>
            </value>
            <value>
                <fullName>Maestro (Educador)</fullName>
            </value>
            <value>
                <fullName>Mecánico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>