force-app/main/default/objects/Contact/fields/REMARK__c.field-meta.xml
<CustomField>
    <fullName>REMARK__c</fullName>
    <label>REMARK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>