force-app/main/default/objects/Contact/fields/Secuencia_correo__c.field-meta.xml
<CustomField>
    <fullName>Secuencia_correo__c</fullName>
    <description>Cantidad de correos agregados en la cuenta</description>
    <label>Secuencia correo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>