force-app/main/default/objects/Contact/fields/Secuencia_direccion__c.field-meta.xml
<CustomField>
    <fullName>Secuencia_direccion__c</fullName>
    <label>Secuencia direccion</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>