force-app/main/default/objects/Contact/fields/Secuencia_telefono__c.field-meta.xml
<CustomField>
    <fullName>Secuencia_telefono__c</fullName>
    <label>Secuencia telefono</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>