force-app/main/default/objects/Contact/fields/Sucursal_de_distribucion__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_de_distribucion__c</fullName>
    <label>Sucursal de distribucion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chinandega</fullName>
            </value>
            <value>
                <fullName>Esteli</fullName>
            </value>
            <value>
                <fullName>Juigalpa</fullName>
            </value>
            <value>
                <fullName>Leon</fullName>
            </value>
            <value>
                <fullName>Matagalpa</fullName>
            </value>
            <value>
                <fullName>Puerto Cabezas</fullName>
            </value>
            <value>
                <fullName>Motoplaza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>