force-app/main/default/objects/Contact/fields/surname__c.field-meta.xml
<CustomField>
    <fullName>surname__c</fullName>
    <label>Apellidos del contacto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>