force-app/main/default/objects/Contact/fields/Tipo_de_contacto_UDC__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_contacto_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de contacto</label>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Contacts (Tipo de contacto)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>