force-app/main/default/objects/Contact/fields/Tipo_de_Identificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Identificaci_n__c</fullName>
    <label>Tipo de Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cedula de Identidad</fullName>
            </value>
            <value>
                <fullName>Cedula de Residente</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>DUI</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>