force-app/main/default/objects/Contact/fields/TYPECODE__c.field-meta.xml
<CustomField>
    <fullName>TYPECODE__c</fullName>
    <label>TYPECODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>