force-app/main/default/objects/Contact/validationRules/Digitos_del_telefono8.validationRule-meta.xml
<ValidationRule>
    <fullName>Digitos_del_telefono8</fullName>
    <active>true</active>
    <description>8 Dígitos del teléfono</description>
    <errorConditionFormula>AND (
NOT(ISBLANK(Phone)),
LEN(Phone) &lt; 8
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>El número de teléfono debe te tener al menos 8 números</errorMessage>
</ValidationRule>