force-app/main/default/objects/Contact/validationRules/Primer_nombre_del_contato.validationRule-meta.xml
<ValidationRule>
    <fullName>Primer_nombre_del_contato</fullName>
    <active>true</active>
    <errorConditionFormula>AND (  Account.RecordType.DeveloperName = &apos;PersonAccount&apos;, ISBLANK( FirstName))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>El campo nombre es obligatorio!</errorMessage>
</ValidationRule>